<resources>

    <string name="app_name">WCSTravel</string>

    <!-- MainActivity -->

    <string name="search_title">Rechercher un vol</string>

    <string name="search_flight">Trajet</string>
    <string name="search_departure_value">Départ</string>
    <string name="search_arrival_value">Arrivée</string>

    <string name="search_departure_date">Date de départ :</string>
    <string name="search_arrival_date">Date de retour :</string>
    <string name="search_departure_date_value">Sélectionner une date de départ</string>

    <string name="search_button">Rechercher un vol</string>
    <string name="search_no_flights">Aucun vol n\'a été trouvé</string>

    <string name="departure_error">Veuillez choisir un aéroport de départ</string>
    <string name="arrival_error">Veuillez choisir un aéroport d\'arrivée</string>
    <string name="departure_date_error">Veuillez choisir une date de départ</string>

    <string name="searched_flight">%1$s_%2$s</string>

    <string name="airline">Compagnie aérienne :</string>
    <string name="price">Prix :</string>
    <string name="convert_price">Convertir le prix</string>

    <string name="price_value_dollars">$ %1$s</string>
    <string name="price_value_euros">%1$s €</string>

</resources>
