<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/airline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/airline"
            android:textSize="15sp"
            android:padding="5dp"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/airlineValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:layout_weight="1"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/resultDepartureDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/search_departure_date"
            android:textSize="15sp"
            android:padding="5dp"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/resultDepartureDateValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:layout_weight="1"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/resultArrivalDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/search_arrival_date"
            android:textSize="15sp"
            android:padding="5dp"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/resultArrivalDateValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:layout_weight="1"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/resultPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/price"
            android:textSize="15sp"
            android:padding="5dp"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/resultPriceValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/convertPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/convert_price"
            android:padding="5dp"
            android:layout_weight="0.67"/>

    </LinearLayout>

</LinearLayout>