<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.wcs.germain.wcstravel.MainActivity"
    android:padding="10dp">

    <TextView
        android:id="@+id/searchTitle_TV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/search_title"
        android:textSize="16sp"
        android:gravity="center_horizontal"
        android:padding="10dp"/>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp">

        <TextView
            android:id="@+id/searchDestination_TV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/search_flight"
            android:textSize="15sp"
            android:padding="10dp"/>

        <Spinner
            android:id="@+id/departureValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:padding="10dp">
        </Spinner>

        <Spinner
            android:id="@+id/arrivalValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:padding="10dp">
        </Spinner>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <TextView
            android:id="@+id/searchDepartureDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/search_departure_date"
            android:textSize="15sp"/>

        <EditText
            android:id="@+id/searchDepartureDateValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="none"
            android:clickable="true"
            android:focusable="false"
            android:hint="@string/search_departure_date_value"
            android:textSize="14sp"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <TextView
            android:id="@+id/searchReturnDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/search_return_date"
            android:textSize="15sp"/>

        <EditText
            android:id="@+id/searchReturnDateValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="none"
            android:clickable="true"
            android:focusable="false"
            android:hint="@string/search_return_date_value"
            android:textSize="14sp"/>

    </LinearLayout>

    <Button
        android:id="@+id/searchButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/search_button"
        android:textSize="15sp"/>

</LinearLayout>
